fixed spacing for the nav on the tablet

--- a/css/main.css
+++ b/css/main.css
@@ -569,7 +569,7 @@ header figure {
 }
 
 header nav {
-  width: 20%;
+  width: 30%;
 }
 
 header nav ul {
